syntax = "proto3";
package offer;
option java_package = "bisq.offer.protobuf";
option java_multiple_files = true;
import "common.proto";
import "network.proto";
import "security.proto";
import "account.proto";

enum Direction {
  BUY = 0;
  SELL = 1;
}

// AmountSpec
message BaseSideFixedAmountSpec {
}
message QuoteSideFixedAmountSpec {
}
message BaseSideRangeAmountSpec {
}
message QuoteSideRangeAmountSpec {
}
message FixedAmountSpec {
  uint64 amount = 1;
  oneof message {
    BaseSideFixedAmountSpec baseSideFixedAmountSpec = 10;
    QuoteSideFixedAmountSpec quoteSideFixedAmountSpec = 11;
  }
}
message RangeAmountSpec {
  uint64 minAmount = 1;
  uint64 maxAmount = 2;
  oneof message {
    BaseSideRangeAmountSpec baseSideRangeAmountSpec = 10;
    QuoteSideRangeAmountSpec quoteSideRangeAmountSpec = 11;
  }
}
message AmountSpec {
  oneof message {
    FixedAmountSpec fixedAmountSpec = 1;
    RangeAmountSpec rangeAmountSpec = 2;
  }
}

// PriceSpec
message FixPrice {
  common.Quote quote = 1;
}
message FloatPrice {
  double percentage = 1;
}
message MarketPrice {
}
message PriceSpec {
  oneof message {
    FixPrice fixPrice = 1;
    FloatPrice floatPrice = 2;
    MarketPrice marketPrice = 3;
  }
}

message PaymentSpec {
  string paymentMethodName = 1;
  optional string saltedMakerAccountId = 2;
}

// options
message ReputationOption {
  uint64 requiredTotalReputationScore = 1;
}
message TradeTermsOption {
  string makersTradeTerms = 1;
}

message CollateralOption {
  uint64 buyerSecurityDeposit = 1;
  uint64 sellerSecurityDeposit = 2;
}

message FeeOption {
  enum FeeType {
    BTC = 0;
    BSQ = 1;
  }
  FeeType feeType = 10;
  uint32 blockHeightAtFeePayment = 11;
  string feeTxId = 12;
}

message FiatPaymentOption {
  string countyCodeOfBank = 1;
  string bankName = 2;
}

message OfferOption {
  oneof message {
    TradeTermsOption tradeTermsOption = 1;
    ReputationOption reputationOption = 2;
    CollateralOption collateralOption = 4;
    FiatPaymentOption fiatPaymentOption = 5;
    FeeOption feeOption = 6;
  }
}

// Offer
message Offer {
  string id = 1;
  uint64 date = 2;
  network.NetworkId makerNetworkId = 3;
  common.Market market = 4;
  Direction direction = 5;
  AmountSpec amountSpec = 6;
  PriceSpec priceSpec = 7;
  repeated account.ProtocolType protocolTypes = 8;
  repeated PaymentSpec baseSidePaymentSpecs = 9;
  repeated PaymentSpec quoteSidePaymentSpecs = 10;
  repeated OfferOption offerOptions = 11;
  oneof message {
    BisqEasyOffer bisqEasyOffer = 30;
  }
}

// BisqEasy
message BisqEasyOffer {
  string chatMessageText = 1;
}


message PocOffer {
  string id = 1;
  uint64 date = 2;
  network.NetworkId makerNetworkId = 3;
  common.Market market = 4;
  Direction direction = 5;
  uint64 baseAmount = 6;
  PriceSpec priceSpec = 7;
  repeated account.ProtocolType protocolTypes = 8;
  repeated PaymentSpec baseSidePaymentSpecs = 9;
  repeated PaymentSpec quoteSidePaymentSpecs = 10;
  repeated OfferOption offerOptions = 11;
  network.MetaData metaData = 12;
}

message OpenOffer {
  PocOffer offer = 1;
}
message OpenOfferStore {
  repeated OpenOffer openOffers = 1;
}
    
